1.7 (dev)
---------
* add YAML format
* new 'Monitor' page to check dataset last update date
*


1.6
---
* add ability to invalidate cache directly from admin endpoint
* add ability to queue task from task log
* invalidate cache on dataset refresh
* add RedisBoard to monitor cache entries
* new HACT endpoint
* add Microsoft style JSON output
* add Microsoft style XML output


1.5
---
* add .xlsx format support
* add ability to invalide all cache at startup (set `INVALIDATE_CACHE` env variable)
* add ability to create default users at startup (set `AUTOCREATE_USERS` env variable)
* enable Azure login without email
* add partner.name to Intervention endpoint


1.4.1
-----
* fixes dependencies


1.4
---
* WARNINGS: migration reset
* updates corepai documentation
* refactor api endpoints
* updates dependencies
* improved schema/country permission checks (multi-tenant/etools)
* improved filtering
* dependencies updates


1.3
---
* Aligned with eTools 6.3.1
* WARNINGS: migration reset
* add ordering support
* updates redoc version
* improves support to handle eTools database changes
* fixes wrog data format in CSV export
* new endpoint FAMIndicator
* new endpoint Tpmvisit
* new endpoint UserStats


1.2
---
* add db logging
* new namespace unicef_security


1.1
---
* Fixes wrong import in middleware


1.0
---
* SystemFilters. Ability to force per user/service filters
* User ACL can grant/demy access to specific serializers
* Internally log any exceptions (django-crashlog)
* Improved endpoint documentation. (Filtering / Lookups )
* removes MultiTenantMiddleware
* everywhere use 'country_name' as schema/tenant selection
* add tracking informations
* allows selection multiple schemas in admin


0.3
---
* TaskLog to monitor ETL task
* Avoid ETL taks overlapping
* Login page
* Add Filtering information to swagger


0.2
---
* add Interventions


0.1
---
* Initial release