@@ -1,0 +1,28 @@
+# Generated by Django 2.1.3 on 2018-11-23 19:03
+
+import django.contrib.postgres.fields.jsonb
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('etl', '0002_auto_20181119_2028'),
+    ]
+
+    operations = [
+        migrations.AlterModelOptions(
+            name='etltask',
+            options={'get_latest_by': 'timestamp'},
+        ),
+        migrations.RenameField(
+            model_name='etltask',
+            old_name='result',
+            new_name='status',
+        ),
+        migrations.AddField(
+            model_name='etltask',
+            name='results',
+            field=django.contrib.postgres.fields.jsonb.JSONField(blank=True, null=True),
+        ),
+    ]
